Dark mode bug fix

--- a/src/style.css
+++ b/src/style.css
@@ -81,6 +81,6 @@ button:focus-visible {
   }
 
   button {
-    background-color: #f9f9f9;
+    background-color: #1a1a1a;
   }
 }
